Update etl files

--- a/etl/data_exploration.ipynb
+++ b/etl/data_exploration.ipynb
@@ -56,11 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "id": "z20WEQHO8vfd"
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Records: 6394\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -283,7 +290,7 @@
        "[5 rows x 216 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,25 +300,331 @@
     "survey_df = pd.read_csv(path, index_col=0)\n",
     "\n",
     "# Display sample data\n",
-    "survey_df.head()"
+    "print(f'Records: {len(survey_df)}')\n",
+    "survey_df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store columns for each scale in a variable\n",
+    "fwb_cols = ['FWBscore', 'FWB1_1', 'FWB1_2', 'FWB1_3', 'FWB1_4', 'FWB1_5', 'FWB1_6',\n",
+    "            'FWB2_1', 'FWB2_2', 'FWB2_3', 'FWB2_4']\n",
+    "fs_cols = ['FSScore', 'FS1_1', 'FS1_2', 'FS1_3', 'FS1_4', 'FS1_5', 'FS1_6', 'FS1_7',\n",
+    "            'FS2_1', 'FS2_2', 'FS2_3']\n",
+    "lm_cols = ['LMscore', 'FINKNOWL1', 'FINKNOWL2', 'FINKNOWL3',\n",
+    "           'FK1correct', 'FK2correct', 'FK3correct']\n",
+    "kh_cols = ['KHscore', 'KHKNOWL1', 'KHKNOWL2','KHKNOWL3','KHKNOWL4','KHKNOWL5',\n",
+    "           'KHKNOWL6','KHKNOWL7','KHKNOWL8','KHKNOWL9', 'KH1correct', 'KH2correct',\n",
+    "           'KH3correct', 'KH4correct', 'KH5correct', 'KH6correct', 'KH7correct',\n",
+    "           'KH8correct', 'KH9correct']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sample           int64\n",
+       "fpl              int64\n",
+       "SWB_1            int64\n",
+       "SWB_2            int64\n",
+       "SWB_3            int64\n",
+       "                ...   \n",
+       "PPT612           int64\n",
+       "PPT1317          int64\n",
+       "PPT18OV          int64\n",
+       "PCTLT200FPL      int64\n",
+       "finalwt        float64\n",
+       "Length: 216, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "survey_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FWB Mean Score: 56.03409446355959\n"
+      "FWB Mean Score: 56.03409446355959\n",
+      "FWB Mean Score (Weighted): 54.20231649953065\n",
+      "FWB Percentiles: \n",
+      "0.10    38.0\n",
+      "0.25    48.0\n",
+      "0.50    56.0\n",
+      "0.75    65.0\n",
+      "0.90    74.0\n",
+      "Name: FWBscore, dtype: float64\n",
+      "FWB Percentiles (Weighted): \n",
+      "0.10    24.753388\n",
+      "0.25    32.990588\n",
+      "0.50    46.171876\n",
+      "0.75    66.921936\n",
+      "0.90    91.481102\n",
+      "dtype: float64\n",
+      "PUF_ID\n",
+      "10350     20.201053\n",
+      "7740      67.705596\n",
+      "13699     40.922635\n",
+      "7267      69.132679\n",
+      "7375     208.772739\n",
+      "            ...    \n",
+      "11220     31.872719\n",
+      "13118     59.897899\n",
+      "8709      67.039953\n",
+      "8515      56.347287\n",
+      "8516      30.697964\n",
+      "Length: 6394, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "# Check basic stats against research report\n",
-    "print(f\"FWB Mean Score: {survey_df['FWBscore'].mean()}\")\n"
+    "fwb_score = survey_df['FWBscore']\n",
+    "final_wt = survey_df['finalwt']\n",
+    "fwb_score_wt = fwb_score * final_wt\n",
+    "print(f\"FWB Mean Score: {fwb_score.mean()}\")\n",
+    "print(f\"FWB Mean Score (Weighted): {fwb_score_wt.mean()}\")\n",
+    "print(f\"FWB Percentiles: \\n{fwb_score.quantile([.1, .25, .5, .75, .9])}\")\n",
+    "print(f\"FWB Percentiles (Weighted): \\n{fwb_score_wt.quantile([.1, .25, .5, .75, .9])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sample           0\n",
+       "fpl              0\n",
+       "SWB_1           31\n",
+       "SWB_2           57\n",
+       "SWB_3           65\n",
+       "              ... \n",
+       "PPT612           0\n",
+       "PPT1317          0\n",
+       "PPT18OV          0\n",
+       "PCTLT200FPL    395\n",
+       "finalwt          0\n",
+       "Length: 216, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Code Ref: https://stackoverflow.com/questions/64144977/how-to-find-pandas-columns-with-one-or-more-negative-values\n",
+    "int_columns = [col for col in survey_df.columns if survey_df[col].dtype.name == 'int64']\n",
+    "\n",
+    "survey_df[survey_df[int_columns] < 0].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FWBscore     5\n",
+       "FWB1_1      11\n",
+       "FWB1_2      11\n",
+       "FWB1_3       9\n",
+       "FWB1_4      11\n",
+       "FWB1_5      13\n",
+       "FWB1_6       9\n",
+       "FWB2_1      10\n",
+       "FWB2_2      14\n",
+       "FWB2_3      11\n",
+       "FWB2_4      12\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fwb_df = survey_df[fwb_cols]\n",
+    "fwb_df[fwb_df < 0].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FWBscore</th>\n",
+       "      <th>FWB1_1</th>\n",
+       "      <th>FWB1_2</th>\n",
+       "      <th>FWB1_3</th>\n",
+       "      <th>FWB1_4</th>\n",
+       "      <th>FWB1_5</th>\n",
+       "      <th>FWB1_6</th>\n",
+       "      <th>FWB2_1</th>\n",
+       "      <th>FWB2_2</th>\n",
+       "      <th>FWB2_3</th>\n",
+       "      <th>FWB2_4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PUF_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12173</th>\n",
+       "      <td>-4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7938</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7305</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7982</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7197</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        FWBscore  FWB1_1  FWB1_2  FWB1_3  FWB1_4  FWB1_5  FWB1_6  FWB2_1  \\\n",
+       "PUF_ID                                                                     \n",
+       "12173         -4      -4      -4      -4      -4      -4      -4      -4   \n",
+       "7938          -1      -1      -1      -1      -1      -1      -1      -1   \n",
+       "7305          -1      -1      -1      -1      -1      -1      -1      -1   \n",
+       "7982          -1      -1      -1      -1      -1      -1      -1      -1   \n",
+       "7197          -1      -1      -1      -1      -1      -1      -1      -1   \n",
+       "\n",
+       "        FWB2_2  FWB2_3  FWB2_4  \n",
+       "PUF_ID                          \n",
+       "12173       -4      -4      -4  \n",
+       "7938        -1      -1      -1  \n",
+       "7305        -1      -1      -1  \n",
+       "7982        -1      -1      -1  \n",
+       "7197        -1      -1      -1  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "survey_df[(survey_df[fwb_cols] < 0).all(axis=1)][fwb_cols]"
    ]
   }
  ],
