--- a/etl/data_exploration.ipynb
+++ b/etl/data_exploration.ipynb
@@ -5905,9 +5905,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.26791880770701243, 'ENDSMEET'),\n",
+       " (0.14850193126959937, 'ABSORBSHOCK'),\n",
+       " (0.10648329198929624, 'GOALCONF'),\n",
+       " (0.06954837555532496, 'SAVINGSRANGES'),\n",
+       " (0.05840765228008046, 'MATHARDSHIP_1'),\n",
+       " (0.052632077631876974, 'MANAGE1_3'),\n",
+       " (0.04563329421976834, 'SAVEHABIT'),\n",
+       " (0.03431421658892161, 'MATHARDSHIP_2'),\n",
+       " (0.032356047866293196, 'MANAGE1_1'),\n",
+       " (0.031163535748499435, 'MANAGE1_2'),\n",
+       " (0.029239960652622597, 'MATHARDSHIP_4'),\n",
+       " (0.016256533877951597, 'HOUSESAT'),\n",
+       " (0.013321554798206608, 'MATHARDSHIP_5'),\n",
+       " (0.012907813419855575, 'PRODHAVE_6'),\n",
+       " (0.01251143583935395, 'PPINCIMP'),\n",
+       " (0.008902585694383371, 'HOUSING'),\n",
+       " (0.008619279140362635, 'agecat'),\n",
+       " (0.007808126966888172, 'SCFHORIZON'),\n",
+       " (0.004521350837403489, 'EMPLOY1_8'),\n",
+       " (0.0040671604647535935, 'MATHARDSHIP_3'),\n",
+       " (0.0038687490064117287, 'fpl'),\n",
+       " (0.0031928319262934024, 'PPMARIT'),\n",
+       " (0.003180091322961164, 'BENEFITS_3'),\n",
+       " (0.0030055229969883695, 'HEALTH'),\n",
+       " (0.0025863973120437735, 'PROPPLAN_4'),\n",
+       " (0.00231019935908867, 'PROPPLAN_3'),\n",
+       " (0.0015076576960416932, 'MATHARDSHIP_6'),\n",
+       " (0.001425295981210378, 'PPETHM'),\n",
+       " (0.0013359080914929356, 'PROPPLAN_2'),\n",
+       " (0.0012835468340134124, 'VOLATILITY'),\n",
+       " (0.0012740062347623904, 'MANAGE1_4'),\n",
+       " (0.001256629137789554, 'PRODHAVE_3'),\n",
+       " (0.0011385276993036526, 'PPEDUC'),\n",
+       " (0.0008756077255500727, 'PROPPLAN_1'),\n",
+       " (0.0006942099332182751, 'PPREG4'),\n",
+       " (0.0005934640699944316, 'KIDS_2'),\n",
+       " (0.0004942796659685603, 'EMPLOY1_7'),\n",
+       " (0.0004421700271600157, 'KIDS_3'),\n",
+       " (0.00043350309919851676, 'BENEFITS_2'),\n",
+       " (0.0004153689485343947, 'KIDS_1'),\n",
+       " (0.0004059410647414213, 'BENEFITS_1'),\n",
+       " (0.0003533944159755583, 'MILITARY'),\n",
+       " (0.00034514088910147134, 'EMPLOY1_4'),\n",
+       " (0.00033195786360028283, 'KIDS_3'),\n",
+       " (0.0003256400687614403, 'EMPLOY1_2'),\n",
+       " (0.00030651509396202207, 'BENEFITS_5'),\n",
+       " (0.00029180920005835755, 'EMPLOY1_1'),\n",
+       " (0.00025320199182175774, 'EMPLOY1_9'),\n",
+       " (0.00021816531583200902, 'EMPLOY1_6'),\n",
+       " (0.00021373248329973474, 'PPGENDER'),\n",
+       " (0.00020773557338997443, 'BENEFITS_4'),\n",
+       " (0.0001706907601954919, 'EMPLOY1_3'),\n",
+       " (0.00014707566278051806, 'EMPLOY1_5')]"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Random Forests in sklearn will automatically calculate feature importance\n",
     "importances = rf_model.feature_importances_\n",
