--- a/data_exploration_2.ipynb
+++ b/data_exploration_2.ipynb
@@ -4212,7 +4212,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -4632,6 +4634,16 @@
     "# Remove rows with negative values\n",
     "data_df.drop(index=data_to_drop.index, inplace=True)\n",
     "data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode (convert to dummy variables) several columns\n",
+    "encoded_variables = pd.get_dummies(rate_df['IMF Country Code'])"
    ]
   },
   {
